@startuml
interface CommandInt {
    Execute() : void
}
class Commands {
    shape : string
    + Commands(shape:string)
    + Execute() : void
    + Undo() : void
    + Redo() : void
    + PrintSVG() : void
    + CreateSVG() : void
    + <<override>> ToString() : string
}
class AddCMD {
    + shape : string
    + AddCMD(shape:String, history:List<string>)
    + Execute() : void
}
class UndoCMD {
    + UndoCMD(history:List<string>, redoList:List<string>)
    + Execute() : void
}
class RedoCMD {
    + RedoCMD(history:List<string>, redoList:List<string>)
    + Execute() : void
}
class PrintSVGCMD {
    + PrintSVGCMD(history:List<string>)
    + Execute() : void
}
class CreateSVGCMD {
    + CreateSVGCMD(history:List<string>)
    + Execute() : void
}
class "List`1"<T> {
}
CommandInt <|-- Commands
CommandInt <|-- AddCMD
AddCMD --> "history<String>" "List`1"
AddCMD --> "redoList<String>" "List`1"
CommandInt <|-- UndoCMD
UndoCMD --> "history<String>" "List`1"
UndoCMD --> "redoList<String>" "List`1"
CommandInt <|-- RedoCMD
RedoCMD --> "history<String>" "List`1"
RedoCMD --> "redoList<String>" "List`1"
CommandInt <|-- PrintSVGCMD
PrintSVGCMD --> "history<String>" "List`1"
CommandInt <|-- CreateSVGCMD
CreateSVGCMD --> "history<String>" "List`1"
@enduml
